[package]
name = "gap"
version = "0.1.0"
authors = ["reimu <r two hakurei not real@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "*"
lazy_static = "1.4.0"
